--- a/frontend/src/styles/StepPages.css
+++ b/frontend/src/styles/StepPages.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: Arial, sans-serif;
-  background-color: #2e2e3a;
+  background-color: #3b3b47;
   color: white;
 }
 
@@ -20,13 +20,6 @@ h1 {
   font-style: normal;
 }
 
-.container {
-  display: flex;
-  height: 90vh;
-  max-width: 100vw; /* 화면 전체 너비를 차지 */
-  margin: 0 50px;
-  align-items: stretch; /* nav-container와 right-container가 같은 높이가 되도록 설정 */
-}
 .nav-container {
   border-radius: 10px;
   width: 200px; /* nav-container의 너비를 고정 */
@@ -72,16 +65,13 @@ h1 {
   box-shadow: none; /* 클릭 시 그림자 제거 */
 }
 .right-container {
-  flex-grow: 1; /* 나머지 공간을 모두 차지하도록 설정 */
+  flex: 1; /* 나머지 공간을 모두 차지하도록 설정 */
   display: flex;
   flex-direction: column;
   padding: 20px;
   border-radius: 10px;
-  /* margin-left: 10px; nav-container와의 공백을 줄이기 위해 작은 마진 설정 */
   overflow: hidden; /* 이미지가 컨테이너를 벗어나지 않도록 설정 */
-  max-width: calc(
-    100vw - 220px
-  ); /* 화면의 전체 너비에서 nav-container를 뺀 너비를 차지 */
+  margin: 0 100px;
 }
 
 .image-container {
