--- a/frontend/src/styles/StepPages.css
+++ b/frontend/src/styles/StepPages.css
@@ -84,10 +84,13 @@ h1 {
 }
 
 .image-box {
-  flex: 1;
+  /* flex: 1; */
   text-align: center;
-  overflow: hidden; /* 이미지가 박스를 벗어나지 않도록 설정 */
+  /* overflow: hidden; 이미지가 박스를 벗어나지 않도록 설정 */
   margin-right: 10px; /* 이미지 사이 간격 설정 */
+
+  padding: 0; /* 추가 */
+  margin: 0;  /* 추가 */
 }
 
 .image-box:last-child {
@@ -101,6 +104,11 @@ h1 {
   object-fit: contain; /* 이미지 비율을 유지하며 컨테이너에 맞게 조정 */
   border-radius: 10px;
   /* border: 1px solid #ccc; */
+  padding: 0; /* 추가 */
+  margin: 0;  /* 추가 */
+  border: none; /* 추가 */
+  border-radius: 0; /* 추가 */
+
 }
 
 p {
