--- a/frontend/src/styles/StepPages.css
+++ b/frontend/src/styles/StepPages.css
@@ -86,11 +86,11 @@ h1 {
 .image-box {
   /* flex: 1; */
   text-align: center;
-  /* overflow: hidden; 이미지가 박스를 벗어나지 않도록 설정 */
-  margin-right: 10px; /* 이미지 사이 간격 설정 */
-
+  position: relative; /* 추가 */
+  width: 100%; /* 추가 */
+  height: auto; /* 또는 고정 높이 설정 */
   padding: 0; /* 추가 */
-  margin: 0;  /* 추가 */
+  margin: 0; /* 추가 */
 }
 
 .image-box:last-child {
@@ -99,16 +99,16 @@ h1 {
 
 .image-box img {
   max-height: 360px;
-  width: 100%; /* 가로 너비를 100%로 설정 */
-  height: auto; /* 높이는 자동으로 설정하여 비율을 유지 */
-  object-fit: contain; /* 이미지 비율을 유지하며 컨테이너에 맞게 조정 */
+  position: relative; /* 추가 */
+  width: 100%;
+  height: auto;
+  object-fit: cover; /* 또는 'fill' */
+
   border-radius: 10px;
-  /* border: 1px solid #ccc; */
   padding: 0; /* 추가 */
-  margin: 0;  /* 추가 */
+  margin: 0; /* 추가 */
   border: none; /* 추가 */
   border-radius: 0; /* 추가 */
-
 }
 
 p {
