--- a/frontend/src/styles/navibar.css
+++ b/frontend/src/styles/navibar.css
@@ -1,8 +1,8 @@
 /* Navbar Styles */
-.navbar {
+/* .navbar {
     position: absolute;
-    width: 80px; /* 네비바 너비 */
-    height: 500px; /* 네비바 높이 */
+    width: 80px;
+    height: 500px;
     background: radial-gradient(29.37% 56.06% at 85.31% 32.9%, rgba(0, 0, 0, 0.2) 0%, rgba(103, 137, 204, 0.195418) 0.15%, rgba(3, 5, 10, 0.190837) 25.52%, rgba(37, 60, 105, 0.099) 50%, rgba(0, 0, 0, 0.2) 99.27%), #2D2938;
     border-radius: 10px;
     display: flex;
@@ -10,23 +10,22 @@
     align-items: center;
     padding: 10px 0;
   }
-  
-  .nav-item {
+   */
+.nav-item {
     width: 69px;
     height: 71px;
-    background: rgba(72, 70, 83, 0.3);
+    background: rgba(3, 5, 10, 0.190837) 25.52%;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 20px;
-    margin-bottom: 10px; /* 항목 간격 */
+    margin-bottom: 15px; /* 항목 간격 */
     display: flex;
     justify-content: center;
     align-items: center;
-  }
-  
-  .nav-icon {
-    width: 40px; /* 아이콘 너비 */
-    height: 40px; /* 아이콘 높이 */
-    border: 4px solid #FFFFFF; /* 아이콘 테두리 */
-    border-radius: 50%;
+}
+
+
+.nav-icon {
+    width: 40px; /* 원하는 너비 */
+    height: 40px; /* 원하는 높이 */
   }
   
