--- a/frontend/src/styles/navibar.css
+++ b/frontend/src/styles/navibar.css
@@ -12,20 +12,48 @@
   }
    */
 .nav-item {
-    width: 69px;
-    height: 71px;
-    background: rgba(3, 5, 10, 0.190837) 25.52%;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 20px;
-    margin-bottom: 15px; /* 항목 간격 */
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  width: 69px;
+  height: 71px;
+  background: rgba(3, 5, 10, 0.190837) 25.52%;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 20px;
+  margin-bottom: 15px; /* 항목 간격 */
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-
 .nav-icon {
-    width: 40px; /* 원하는 너비 */
-    height: 40px; /* 원하는 높이 */
-  }
-  
+  width: 40px; /* 원하는 너비 */
+  height: 40px; /* 원하는 높이 */
+}
+.modal-backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.7);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000; /* 다른 요소들보다 위로 올리기 위해 z-index 설정 */
+}
+
+/* 모달의 컨텐츠 */
+.modal-content {
+  display: flex;
+  flex-direction: column;
+  width: 500px;
+  height: 400px;
+  background: rgba(0, 0, 0, 0.9);
+  justify-content: center;
+  align-items: center;
+  border-radius: 8px;
+  text-align: center;
+  z-index: 1010; /* 컨텐츠도 z-index를 높게 설정 */
+}
+
+.modal-content button {
+  margin: 10px;
+}
