--- a/frontend/src/styles/Mainpage.css
+++ b/frontend/src/styles/Mainpage.css
@@ -1,3 +1,4 @@
+/* 공통 스타일 초기화 */
 * {
   margin: 0;
   padding: 0;
@@ -13,6 +14,41 @@ html {
   /* overflow: hidden; 가로/세로 스크롤 제거 */
 }
 
+/* 헤더 컨테이너 스타일 */
+.header-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 10px 20px;
+  margin-bottom: 70px; /* 헤더와 아래 컨텐츠 간격 */
+}
+
+.logo img {
+  height: 50px; /* 로고 이미지 높이 조정 */
+}
+
+.header-container h1 {
+  flex: 1;
+  text-align: center;
+  margin: 0; /* 기본 마진 제거 */
+  color: white;
+  font-weight: bolder;
+}
+
+.current-time {
+  font-size: 20px;
+  color: white;
+  margin-top: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.current-time div {
+  margin-top: 5px;
+}
+
 /* 기본 컨테이너 스타일 */
 .container {
   display: flex;
@@ -24,6 +60,8 @@ html {
   box-sizing: border-box;
 }
 
+/* 기존의 h1 스타일 제거 (헤더 내 h1 사용) */
+/*
 h1 {
   color: white;
   text-align: center;
@@ -31,6 +69,7 @@ h1 {
   margin-bottom: 80px;
   margin-top: 20px;
 }
+*/
 
 h2 {
   margin-bottom: 20px;
@@ -44,7 +83,7 @@ h2 {
   align-items: center;
   justify-content: center;
   flex: 0.5;
-  padding-right: 300px;
+  padding-right: 400px;
   /* padding-bottom: 50px; */
 }
 
@@ -110,12 +149,12 @@ h2 {
   cursor: crosshair;
 }
 
-/*------------------------------------- 영상 크기 맞춤 조절 추가 */
+/* 영상 크기 맞춤 조절 */
 .monitorScreen img {
-  width: 100%; /* 모니터 너비에 맞추기 */
-  height: 100%; /* 모니터 높이에 맞추기 */
-  object-fit: contain; /* 영상 비율을 유지하면서 컨테이너에 맞춤 */
-  border-radius: 10px; /* 모니터 테두리와 맞추기 */
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  border-radius: 10px;
 }
 
 /* 모니터 받침대 스타일 */
@@ -162,6 +201,7 @@ h2 {
     width: 100%;
     justify-content: center;
     margin-bottom: 100px;
+    /* margin-top: 300px; */
   }
 
   .simulatorSection {
