--- a/frontend/src/styles/Mainpage.css
+++ b/frontend/src/styles/Mainpage.css
@@ -14,39 +14,9 @@ html {
   /* overflow: hidden; 가로/세로 스크롤 제거 */
 }
 
-/* 헤더 컨테이너 스타일 */
-.header-container {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 10px 20px;
-  margin-bottom: 70px; /* 헤더와 아래 컨텐츠 간격 */
-}
-
 .logo img {
-  height: 50px; /* 로고 이미지 높이 조정 */
-}
-
-.header-container h1 {
-  flex: 1;
-  text-align: center;
-  margin: 0; /* 기본 마진 제거 */
-  color: white;
-  font-weight: bolder;
-}
-
-.current-time {
-  font-size: 20px;
-  color: white;
-  margin-top: 10px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.current-time div {
-  margin-top: 5px;
+  padding-top: 20px;
+  height: 120px; /* 로고 이미지 높이 조정 */
 }
 
 /* 기본 컨테이너 스타일 */
@@ -59,17 +29,6 @@ html {
   /* padding: 0 2%; */
   box-sizing: border-box;
 }
-
-/* 기존의 h1 스타일 제거 (헤더 내 h1 사용) */
-/*
-h1 {
-  color: white;
-  text-align: center;
-  font-weight: bolder;
-  margin-bottom: 80px;
-  margin-top: 20px;
-}
-*/
 
 h2 {
   margin-bottom: 20px;
@@ -84,6 +43,7 @@ h2 {
   justify-content: center;
   flex: 0.5;
   padding-right: 400px;
+  padding-top: 70px;
   /* padding-bottom: 50px; */
 }
 
