--- a/frontend/src/styles/navibar.css
+++ b/frontend/src/styles/navibar.css
@@ -1,16 +1,9 @@
 /* Navbar Styles */
-/* .navbar {
-    position: absolute;
-    width: 80px;
-    height: 500px;
-    background: radial-gradient(29.37% 56.06% at 85.31% 32.9%, rgba(0, 0, 0, 0.2) 0%, rgba(103, 137, 204, 0.195418) 0.15%, rgba(3, 5, 10, 0.190837) 25.52%, rgba(37, 60, 105, 0.099) 50%, rgba(0, 0, 0, 0.2) 99.27%), #2D2938;
-    border-radius: 10px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 10px 0;
-  }
-   */
+.navbar {
+  position: fixed;
+  z-index: 1000;
+}
+
 .nav-item {
   width: 69px;
   height: 71px;
