--- a/frontend/src/styles/StepPages.css
+++ b/frontend/src/styles/StepPages.css
@@ -6,20 +6,29 @@ body {
   color: white;
 }
 
-h1 {
+h3 {
   color: white;
-  font-size: 40px;
-  font-weight: bold;
-  text-align: center;
-  /* margin-top: 30px; */
-  padding-top: 20px;
+  font-size: 20px;
   font-family: "Eoe_Zno_EB";
   src: url("https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_eight@1.0/Eoe_Zno_EB.woff")
     format("woff");
   font-weight: normal;
   font-style: normal;
+  margin-left: 20px;
+  margin-bottom: 10px;
 }
 
+.explain {
+  color: white;
+  font-size: 20px;
+  font-family: "Eoe_Zno_EB";
+  src: url("https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_eight@1.0/Eoe_Zno_EB.woff")
+    format("woff");
+  font-weight: normal;
+  font-style: normal;
+  margin-left: 20px;
+  margin-bottom: 10px;
+}
 .nav-container {
   border-radius: 10px;
   width: 200px; /* nav-container의 너비를 고정 */
@@ -82,8 +91,6 @@ h1 {
 }
 .image-container {
   display: flex;
-  
- 
 
   justify-content: space-around;
   background-color: rgba(46, 46, 58, 0.5);
@@ -99,7 +106,7 @@ h1 {
   margin-right: 10px; /* 이미지 사이 간격 설정 */
 
   padding: 0; /* 추가 */
-  margin: 0;  /* 추가 */
+  margin: 0; /* 추가 */
 }
 
 .image-box:last-child {
@@ -114,20 +121,9 @@ h1 {
   border-radius: 10px;
   /* border: 1px solid #ccc; */
   padding: 0; /* 추가 */
-  margin: 0;  /* 추가 */
+  margin: 0; /* 추가 */
   border: none; /* 추가 */
   border-radius: 0; /* 추가 */
-
-}
-
-p {
-  letter-spacing: 1px;
-  margin-top: 10px;
-  font-family: "Eoe_Zno_EB";
-  src: url("https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_eight@1.0/Eoe_Zno_EB.woff")
-    format("woff");
-  font-weight: normal;
-  font-style: normal;
 }
 
 span {
@@ -196,7 +192,6 @@ input::placeholder {
   font-style: normal;
 }
 
-
 .submit-btn {
   box-sizing: border-box;
   appearance: none;
@@ -215,10 +210,9 @@ input::placeholder {
   text-decoration: none;
   text-align: center;
   text-transform: uppercase;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-weight: 700;
   transition: box-shadow 300ms ease-in-out, color 300ms ease-in-out;
-  
 }
 
 .submit-btn:hover {
@@ -229,8 +223,6 @@ input::placeholder {
 .submit-btn:focus {
   outline: none;
 }
-
-
 
 .previous-btn {
   box-sizing: border-box;
@@ -250,10 +242,9 @@ input::placeholder {
   text-decoration: none;
   text-align: center;
   text-transform: uppercase;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-weight: 700;
   transition: box-shadow 300ms ease-in-out, color 300ms ease-in-out;
-  
 }
 
 .previous-btn:hover {
@@ -265,9 +256,8 @@ input::placeholder {
   outline: none;
 }
 
-
 .choice-btn {
-  background-color: #00AE68;
+  background-color: #00ae68;
   color: white;
   border: none;
   padding: 16px 32px;
@@ -278,15 +268,14 @@ input::placeholder {
 }
 
 .choice-btn:hover {
-  background-color: #21825B;
+  background-color: #21825b;
   margin-top: 15px;
   margin-bottom: 5px;
   box-shadow: 0px 0px 0px 0px #007144;
 }
 
-
 .choice-one-btn {
-  background-color: #FFAA40;
+  background-color: #ffaa40;
   color: white;
   border: none;
   padding: 16px 32px;
@@ -297,7 +286,7 @@ input::placeholder {
 }
 
 .choice-one-btn:hover {
-  background-color: #FF8E00;
+  background-color: #ff8e00;
   margin-top: 15px;
   margin-bottom: 5px;
   box-shadow: 0px 0px 0px 0px #007144;
