--- a/frontend/src/styles/StepPages.css
+++ b/frontend/src/styles/StepPages.css
@@ -18,15 +18,15 @@ h3 {
   margin-bottom: 10px;
 }
 
-.explain {
+.right-container .explain {
   color: white;
-  font-size: 20px;
+  font-size: 15px;
   font-family: "Eoe_Zno_EB";
   src: url("https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_eight@1.0/Eoe_Zno_EB.woff")
     format("woff");
   font-weight: normal;
   font-style: normal;
-  margin-left: 20px;
+  margin-left: 23px;
   margin-bottom: 10px;
 }
 .nav-container {
@@ -83,12 +83,6 @@ h3 {
   margin: 0 100px;
 }
 
-.right-container p {
-  font-size: 20px;
-  font-weight: bold;
-  margin-bottom: 10px;
-  margin-left: 20px;
-}
 .image-container {
   display: flex;
 
